--- a/client/src/sass/Home.scss
+++ b/client/src/sass/Home.scss
@@ -1,45 +1,56 @@
 .home {
-  margin: 0 auto;
-  border: 1px solid red;
   .search {
-    margin-top: 20vh;
+    margin-top: 35vh;
     form {
       .search-input-wrapper {
-        width: 500px;
+        width: 595px;
         margin: 0 auto;
+        height: 50px;
         display: flex;
         justify-content: space-between;
         input {
-          height: 40px;
-          border: 2px solid #dddddd;
-          background-color: #dddddd;
-          border-radius: 4px 4px 0 0;
-          padding: 10px;
-          font-size: 16px;
-          width: 425px;
+          border: 1px solid rgb(218, 218, 218);
+          height: 50px;
+          font-size: 15px;
+          width: 500px;
+          font-weight: 600;
+          padding-left: 48px;
+          border-radius: 10px;
         }
         input:focus {
           outline: none;
-          border: 2px solid red;
+          -webkit-box-shadow: 0px 7px 11px 0px rgba(0, 0, 0, 0.05);
+          -moz-box-shadow: 0px 7px 11px 0px rgba(0, 0, 0, 0.05);
+          box-shadow: 0px 7px 11px 0px rgba(0, 0, 0, 0.05);
+        }
+        input::placeholder {
+          color: rgb(184, 184, 184);
         }
         input:hover {
-          border: 2px solid red;
+          transition: 0.18s;
+          transition-timing-function: ease-in-out;
+          -webkit-box-shadow: 0px 7px 11px 0px rgba(0, 0, 0, 0.05);
+          -moz-box-shadow: 0px 7px 11px 0px rgba(0, 0, 0, 0.05);
+          box-shadow: 0px 7px 11px 0px rgba(0, 0, 0, 0.05);
         }
+
         button {
+          height: 50px;
+          border-radius: 10px;
           border: none;
-          height: 40px;
-          margin-left: 10px;
-          border-radius: 5px;
-          padding: 10px;
-          font-size: 16px;
+          padding: 10px 20px;
           cursor: pointer;
+          background-color: #3080f8;
+          color: #fff;
+          font-size: 15px;
+          font-weight: 600;
         }
         button:focus {
           outline: none;
-          background-color: red;
+          background-color: #1267e7;
         }
         button:hover {
-          background-color: red;
+          background-color: #1267e7;
         }
       }
     }
@@ -63,23 +74,28 @@
         max-height: 90px;
         .top {
           display: flex;
-          align-items: flex-start;
+          align-items: center;
+
           p {
             margin: 0;
-            margin-left: 12px;
+            margin-left: 10px;
             font-weight: 500;
-            span {
-              display: block;
-              font-weight: 300;
-              color: grey;
-              font-size: 13px;
-            }
+          }
+          .subscribers {
+            font-weight: 300;
+            font-size: 13px;
+            color: #8a8a8a;
+          }
+          .more {
+            margin-left: 35px;
+            font-weight: 300;
           }
         }
         img {
           border-radius: 50px;
           height: 25px;
           padding-top: 0px;
+          background-color: #dddddd;
         }
       }
       .result:hover {
