--- a/client/src/sass/Home.scss
+++ b/client/src/sass/Home.scss
@@ -1,6 +1,20 @@
 .home {
+  height: 100%;
+  width: 100%;
   .search {
-    margin-top: 35vh;
+    margin-top: 25vh;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    .focus {
+      width: 595px;
+      margin: 0 auto;
+      text-align: center;
+      h1 {
+        font-size: 60px;
+        margin: 20px 0;
+      }
+    }
     form {
       .search-input-wrapper {
         width: 595px;
@@ -33,7 +47,9 @@
           -moz-box-shadow: 0px 7px 11px 0px rgba(0, 0, 0, 0.05);
           box-shadow: 0px 7px 11px 0px rgba(0, 0, 0, 0.05);
         }
-
+        .active {
+          border-radius: 10px 10px 0 0;
+        }
         button {
           height: 50px;
           border-radius: 10px;
@@ -56,16 +72,20 @@
     }
   }
   .results-wrapper {
-    width: 500px;
+    width: 595px;
     margin: 0 auto;
-
     .results {
-      width: 422px;
+      border-top: 2px solid rgb(218, 218, 218);
+      width: 500px;
+      height: 362px;
+      overflow-y: scroll;
       font-size: 16px;
-      border-radius: 0 0 5px 5px;
-      -webkit-box-shadow: 0px 8px 8px 3px rgba(0, 0, 0, 0.13);
-      -moz-box-shadow: 0px 8px 8px 3px rgba(0, 0, 0, 0.13);
-      box-shadow: 0px 8px 8px 3px rgba(0, 0, 0, 0.13);
+      border-radius: 0 0 10px 10px;
+      transition: 0.18s;
+      transition-timing-function: ease-in-out;
+      -webkit-box-shadow: 0px 7px 11px 0px rgba(0, 0, 0, 0.05);
+      -moz-box-shadow: 0px 7px 11px 0px rgba(0, 0, 0, 0.05);
+      box-shadow: 0px 7px 11px 0px rgba(0, 0, 0, 0.05);
       .result {
         display: flex;
         flex-direction: column;
