--- a/client/src/sass/Home.scss
+++ b/client/src/sass/Home.scss
@@ -130,3 +130,29 @@
     }
   }
 }
+
+// NAVIGATION
+.navigation {
+  margin: 30px;
+  a {
+    text-decoration: none;
+    height: 50px;
+    border-radius: 10px;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    background-color: #df8b80;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 600;
+  }
+  a:focus {
+    outline: none;
+  }
+  a:hover {
+    background-color: #ff2a2a;
+  }
+  .active-nav {
+    background-color: #ff2a2a;
+  }
+}
