--- a/client/src/scss/global/variables.scss
+++ b/client/src/scss/global/variables.scss
@@ -1,4 +1,6 @@
 $primary: rgb(159, 177, 57);
+$primary-dark: rgb(146, 163, 48);
 $secondary: rgb(63, 63, 63);
 $tertiary: rgb(139, 139, 139);
 $border: rgb(221, 221, 221);
+$background: #fafafa;
