--- a/client/src/scss/global/global.scss
+++ b/client/src/scss/global/global.scss
@@ -1,3 +1,6 @@
+@import "../global/variables.scss";
+@import "../global/mixins.scss";
+
 html {
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,4 +8,22 @@ html {
     "Segoe UI Emoji", "Segoe UI Symbol";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: scroll;
+  background: $background;
+  * {
+    box-sizing: border-box;
+  }
+}
+
+.home-container,
+.trending-container {
+  padding-top: 80px;
+  height: 100vh;
+  .home,
+  .trending {
+    margin: 0 auto;
+    max-width: 1160px;
+    background: #fff;
+    height: 400px;
+  }
 }
