--- a/client/src/scss/global/global.scss
+++ b/client/src/scss/global/global.scss
@@ -17,7 +17,6 @@ html {
 
 .home-container,
 .trending-container {
-  margin: 0 auto;
-  margin-top: 80px;
   max-width: 1160px;
+  margin: 80px auto 40px auto;
 }
