--- a/client/src/scss/components/Featured.scss
+++ b/client/src/scss/components/Featured.scss
@@ -5,7 +5,21 @@
   .featured {
     h1 {
       font-weight: 700;
-      margin-bottom: 10px;
+      margin-bottom: 25px;
+    }
+    .hashtags {
+      p {
+        @include center;
+        border: 1px dashed grey;
+        height: 35px;
+        margin-top: 5px;
+        padding: 5px;
+        font-weight: 600;
+        span {
+          font-weight: 400;
+          margin-left: 8px;
+        }
+      }
     }
   }
 }
