Adds post scaffold

--- a/client/src/scss/components/Navigation.scss
+++ b/client/src/scss/components/Navigation.scss
@@ -2,7 +2,7 @@
 @import "../global/mixins.scss";
 
 .navigation-container {
-  border-bottom: 1px solid $border;
+  // border-bottom: 1px solid $border;
   height: 49px;
   background-color: #141519;
   top: 0;
