--- a/client/src/scss/components/Feed.scss
+++ b/client/src/scss/components/Feed.scss
@@ -13,43 +13,53 @@
       justify-content: space-between;
       padding: 0 5px;
       .post {
+        text-decoration: none;
+        color: #000;
         width: 185px;
         height: 185px;
         margin-top: 15px;
-        padding: 5px;
+        padding: 7.5px;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         background: #fff;
-        border: 1px solid rgb(226, 226, 226);
-        // -webkit-box-shadow: 0px 0px 2px 3px rgba(247, 247, 247, 1);
-        // -moz-box-shadow: 0px 0px 2px 3px rgba(247, 247, 247, 1);
-        // box-shadow: 0px 0px 2px 3px rgba(247, 247, 247, 1);
+        // border: 1px solid rgb(226, 226, 226);
+        -webkit-box-shadow: 0px 1px 3px 3px rgba(240, 240, 240, 1);
+        -moz-box-shadow: 0px 1px 3px 3px rgba(240, 240, 240, 1);
+        box-shadow: 0px 1px 3px 3px rgba(240, 240, 240, 1);
+        font-size: 14px;
         border-radius: 8px;
         .source {
-          border: 1px solid red;
-          height: 60px;
+          height: 38px;
           @include center;
           color: $tertiary;
           .media {
             display: flex;
             img {
-              height: 35px;
+              height: 38px;
+              width: 38px;
               border-radius: 100px;
-              padding-right: 5px;
             }
           }
         }
         .preview {
-          border: 1px solid red;
           height: 120px;
+          text-align: center;
         }
         .options {
-          border: 1px solid red;
           height: 30px;
-          text-align: right;
-          padding: 2px;
+          display: flex;
+          justify-content: flex-end;
+          align-items: flex-end;
         }
       }
+      // .post:hover {
+      //   .options {
+      //     svg {
+      //       color: rgb(139, 139, 139);
+      //     }
+      //   }
+      // }
     }
   }
 }
