--- a/client/src/scss/components/Feed.scss
+++ b/client/src/scss/components/Feed.scss
@@ -4,8 +4,8 @@
 .feed-container {
   .feed {
     h1 {
-      font-weight: 700;
-      margin-bottom: 10px;
+      font-weight: 600;
+      font-size: 15px;
     }
     .general {
       display: flex;
@@ -15,20 +15,20 @@
       .post {
         text-decoration: none;
         color: #000;
-        width: 185px;
-        height: 185px;
+        width: 195px;
+        height: 195px;
         margin-top: 15px;
         padding: 7.5px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         background: #fff;
-        // border: 1px solid rgb(226, 226, 226);
-        -webkit-box-shadow: 0px 1px 3px 3px rgba(240, 240, 240, 1);
-        -moz-box-shadow: 0px 1px 3px 3px rgba(240, 240, 240, 1);
-        box-shadow: 0px 1px 3px 3px rgba(240, 240, 240, 1);
+        // -webkit-box-shadow: 0px 0px 3px 2px rgba(245, 245, 245, 1);
+        // -moz-box-shadow: 0px 0px 3px 2px rgba(245, 245, 245, 1);
+        // box-shadow: 0px 0px 3px 2px rgba(245, 245, 245, 1);
+        border: 3px solid rgb(255, 255, 255);
         font-size: 14px;
-        border-radius: 8px;
+        border-radius: 10px;
         .source {
           height: 38px;
           @include center;
@@ -53,13 +53,15 @@
           align-items: flex-end;
         }
       }
-      // .post:hover {
-      //   .options {
-      //     svg {
-      //       color: rgb(139, 139, 139);
-      //     }
-      //   }
-      // }
+      .post:hover {
+        // .options {
+        //   svg {
+        //     color: rgb(139, 139, 139);
+        //   }
+        // }
+        transition: 0.24s ease-in-out;
+        border: 3px solid rgb(224, 224, 224);
+      }
     }
   }
 }
