--- a/client/src/scss/global/global.scss
+++ b/client/src/scss/global/global.scss
@@ -9,7 +9,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-y: scroll;
-  background: $background;
+  background: $background-dark;
   * {
     box-sizing: border-box;
   }
