--- a/client/src/scss/global/variables.scss
+++ b/client/src/scss/global/variables.scss
@@ -4,3 +4,5 @@ $secondary: rgb(63, 63, 63);
 $tertiary: rgb(139, 139, 139);
 $border: rgb(221, 221, 221);
 $background: #fafafa;
+$background-dark: #1d1f24;
+$background-secondary: #2e3035;
