--- a/client/src/scss/components/Feed.scss
+++ b/client/src/scss/components/Feed.scss
@@ -6,6 +6,8 @@
     h1 {
       font-weight: 600;
       font-size: 15px;
+      color: $primary;
+      margin-left: 10px;
     }
     .general {
       display: flex;
@@ -14,21 +16,21 @@
       padding: 0 5px;
       .post {
         text-decoration: none;
-        color: #000;
-        width: 195px;
-        height: 195px;
+        color: $tertiary;
+        width: 200px;
+        height: 200px;
         margin-top: 15px;
         padding: 7.5px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        background: #fff;
+        background: $background-secondary;
         // -webkit-box-shadow: 0px 0px 3px 2px rgba(245, 245, 245, 1);
         // -moz-box-shadow: 0px 0px 3px 2px rgba(245, 245, 245, 1);
         // box-shadow: 0px 0px 3px 2px rgba(245, 245, 245, 1);
-        border: 3px solid rgb(255, 255, 255);
+        border: 3px solid #1d1f24;
         font-size: 14px;
-        border-radius: 10px;
+        border-radius: 12px;
         .source {
           height: 38px;
           @include center;
@@ -59,8 +61,8 @@
         //     color: rgb(139, 139, 139);
         //   }
         // }
-        transition: 0.24s ease-in-out;
-        border: 3px solid rgb(224, 224, 224);
+        transition: 0.2s ease-in-out;
+        border: 3px solid #37393d;
       }
     }
   }
