--- a/client/src/scss/components/Feed.scss
+++ b/client/src/scss/components/Feed.scss
@@ -7,7 +7,7 @@
       font-weight: 600;
       font-size: 15px;
       color: $primary;
-      margin-left: 10px;
+      margin-left: 8px;
     }
     .general {
       display: flex;
@@ -17,10 +17,10 @@
       .post {
         text-decoration: none;
         color: $tertiary;
-        width: 200px;
-        height: 200px;
+        width: 236px;
+        height: 252px;
         margin-top: 15px;
-        padding: 7.5px;
+        padding: 10px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -31,6 +31,7 @@
         border: 3px solid #1d1f24;
         font-size: 14px;
         border-radius: 12px;
+        line-height: 1.2;
         .source {
           height: 38px;
           @include center;
@@ -45,11 +46,22 @@
           }
         }
         .preview {
-          height: 120px;
-          text-align: center;
+          img {
+            background-color: #26282e;
+            height: 117px;
+            width: 210px;
+          }
+          p {
+            margin-top: 3px;
+            text-align: left;
+            font-weight: 500;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+          }
         }
         .options {
-          height: 30px;
           display: flex;
           justify-content: flex-end;
           align-items: flex-end;
@@ -61,6 +73,7 @@
         //     color: rgb(139, 139, 139);
         //   }
         // }
+        // overflow: visible;
         transition: 0.2s ease-in-out;
         border: 3px solid #37393d;
       }
