--- a/client/src/scss/components/Feed.scss
+++ b/client/src/scss/components/Feed.scss
@@ -9,6 +9,17 @@
       color: $primary;
       margin-left: 8px;
     }
+    .loader-container {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-between;
+      padding: 0 5px;
+      svg {
+        margin-top: 15px;
+        border: 3px solid #1d1f24;
+        border-radius: 12px;
+      }
+    }
     .general {
       display: flex;
       flex-flow: row wrap;
@@ -18,7 +29,7 @@
         text-decoration: none;
         color: $tertiary;
         width: 236px;
-        height: 252px;
+        height: 270px;
         margin-top: 15px;
         padding: 10px;
         display: flex;
@@ -36,8 +47,17 @@
           height: 38px;
           @include center;
           color: $tertiary;
+
           .media {
             display: flex;
+            align-items: center;
+            p {
+              font-weight: 500;
+              margin-left: 10px;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              width: 122px;
+            }
             img {
               height: 38px;
               width: 38px;
@@ -54,11 +74,14 @@
           p {
             margin-top: 3px;
             text-align: left;
-            font-weight: 500;
+            font-weight: 400;
             overflow: hidden;
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
+          }
+          .title {
+            font-weight: 600;
           }
         }
         .options {
